Update socket and BE

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -60,6 +60,7 @@
     ]
   },
   "devDependencies": {
+    "@types/codemirror": "^5.60.15",
     "@types/react-syntax-highlighter": "^15.5.13"
   }
 }
