--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,5 @@
 /frontend/package-lock.json
 /frontend/node_modules
 
-/backend
-# /backend/package-lock.json
-# /backend/node_modules
+/backend/package-lock.json
+/backend/node_modules
