--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,33 +1,24 @@
 {
   "name": "code-sync",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.5",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.97",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
     "animate.css": "^4.1.1",
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "codemirror": "^5.65.16",
-    "dotenv": "^16.4.5",
+    "framer-motion": "^11.3.5",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.2",
     "react-codemirror2": "^8.0.0",
     "react-dom": "^18.3.1",
-    "react-highlight": "^0.15.0",
     "react-icons": "^5.2.1",
     "react-notifications-component": "^4.0.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
-    "react-syntax-highlighter": "^15.5.0",
     "react-typed": "^2.0.12",
     "sass": "^1.77.4",
     "socket.io-client": "^4.7.5",
@@ -61,6 +52,13 @@
   },
   "devDependencies": {
     "@types/codemirror": "^5.60.15",
-    "@types/react-syntax-highlighter": "^15.5.13"
+    "@types/react-syntax-highlighter": "^15.5.13",
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^27.5.2",
+    "@types/node": "^16.18.97",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0"
   }
 }
