--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@
 /frontend/package-lock.json
 /frontend/node_modules
 
+/frontend_old
+
 /backend/package-lock.json
 /backend/node_modules
 /backend/.env
